<resources>
    <string name="app_name">GSDemo</string>
    <string name="title_activity_demo">GSDemoActivity</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="google_app_id">DJI</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="action_after_finished">Action After Finished:</string>
    <string name="none">None</string>
    <string name="gohome">GoHome</string>
    <string name="autoland">AutoLand</string>
    <string name="backto_1st">BackTo 1st</string>
    <string name="heading">Heading:</string>
    <string name="auto">Auto</string>
    <string name="initial">Initial</string>
    <string name="rc_control">RC Control</string>
    <string name="use_waypoint">Use Waypoint</string>
    <string name="config">Config</string>
    <string name="upload">Upload</string>
    <string name="gsdemo">GSDemo</string>
    <string name="locate">Locate</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_mainactivity">MainActvity</string>
</resources>
