<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waypoint Configuration"
        android:layout_gravity="center_horizontal"
        tools:ignore="HardcodedText">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude">
        </TextView>
        <EditText
            android:id="@+id/altitude"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/altitude">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed">
        </TextView>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/speed"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/lowSpeed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/low"/>
            <RadioButton
                android:id="@+id/MidSpeed"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/mid"/>
            <RadioButton
                android:id="@+id/HighSpeed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/high"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_after_finished"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/actionAfterFinished"
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessParent">
            <RadioButton
                android:id="@+id/finishNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/none"/>
            <RadioButton
                android:id="@+id/finishGoHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/gohome"/>
            <RadioButton
                android:id="@+id/finishAutoLanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/autoland"/>
            <RadioButton
                android:id="@+id/finishToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/backto_1st"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/heading"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/headingNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/auto"/>
            <RadioButton
                android:id="@+id/headingInitDirec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/initial"/>
            <RadioButton
                android:id="@+id/headingRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/rc_control"/>
            <RadioButton
                android:id="@+id/headingWP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="5pt"
                android:text="@string/use_waypoint"
                tools:ignore="ExtraText" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
